# isotropicResolution

./: CMakeLists.txt  check.cxx  check3D.cxx  itkIsotropicResolutionImageFilter.h  itkIsotropicResolutionImageFilter.txx
Wrapping/: wrap_itkIsotropicResolutionImageFilter.cmake
article/: Article.tex  Makefile
images/: ESCells_0.5_0.img  ESCells_0.5_1.hdr  ESCells_0.5_1.img  ESCells_0_1.hdr  ESCells_1_0.hdr  ESCells_1_0.img  ESCells_1_1.img  ESCells_2_0.hdr  ESCells_2_0.img  ESCells_2_1.img  cthead1_0.5_0.hdr  cthead1_0.5_0.img  cthead1_0.5_1.img  cthead1_0_0.hdr  cthead1_0_0.img  cthead1_0_1.img  cthead1_1_0.hdr  cthead1_1_0.img  cthead1_1_1.img  cthead1_2_0.hdr  cthead1_2_0.img  cthead1_2_1.img
